valdez camapanario dans le matin

--- a/src/sass/libs/_intro.scss
+++ b/src/sass/libs/_intro.scss
@@ -49,11 +49,11 @@
         
         .second-line {
           // letter-spacing: -0.04em;
-          margin-left: -0.7rem;
-          width: 110%;
+          // margin-left: -0.7rem;
+          //  width: 110%;
           .space {
             display: inline-block;
-            width: 0.7em;
+            // width: 0.7em;
           }
           .next-line {
             font-size: 1.4em;
