--- a/public/css/main.css
+++ b/public/css/main.css
@@ -390,14 +390,10 @@ svg:focus {
         text-shadow: 0 -2px 8px rgba(255, 255, 255, 0.15), 0 -6px 8px rgba(189, 230, 219, 0.6), 0 -3px 2px rgba(213, 255, 247, 0.8), 0 4px 0px #ff7598, 0 7px 2px rgba(42, 48, 49, 0.2), 0 8px 8px rgba(255, 66, 91, 0.7), 0 -2px 2px rgba(255, 255, 255, 0.5), 0 20px 4px rgba(84, 56, 145, 0.3); }
         #intro .intro-wrapper .my-name-container .my-name .name-line {
           width: 100%; }
-        #intro .intro-wrapper .my-name-container .my-name .second-line {
-          margin-left: -0.7rem;
-          width: 110%; }
-          #intro .intro-wrapper .my-name-container .my-name .second-line .space {
-            display: inline-block;
-            width: 0.7em; }
-          #intro .intro-wrapper .my-name-container .my-name .second-line .next-line {
-            font-size: 1.4em; }
+        #intro .intro-wrapper .my-name-container .my-name .second-line .space {
+          display: inline-block; }
+        #intro .intro-wrapper .my-name-container .my-name .second-line .next-line {
+          font-size: 1.4em; }
 
 #main_title {
   position: absolute;
